--- a/Good.html
+++ b/Good.html
@@ -460,7 +460,7 @@ setInterval(refreshPage, 10000);
     <img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="Home">
     Home
   </a>
-  <a href="https://iphonechannels123.blogspot.com/">
+  <a href="https://sodkk.github.io/Last/channelis.html">
     <img src="https://cdn-icons-png.flaticon.com/512/2502/2502208.png" alt="Channel">
     Channel
   </a>
