--- a/channelis.html
+++ b/channelis.html
@@ -1,3 +1,54 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>beIN SPORTS Channel List</title>
+  <style>
+    .channel-container {
+      display: flex;
+      gap: 10px;
+      overflow-x: auto;
+      padding: 10px;
+      position: center;
+    }
+
+    .channel {
+       /* Increased border height */
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      position: relative; /* Added position relative */
+      position: center;
+    }
+
+    .hd-icon {
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      background-color: red;
+      color: white;
+      font-size: 12px;
+      padding: 3px 7px;
+      border-radius: 10%;
+      z-index: 1; /* Ensures the icon is above the image */
+    }
+
+    .channel img {
+      max-width: 100%;
+      height: 120px;
+      border-radius: 7px; /* Adjusted border radius for images */
+    }
+  </style>
+</head>
+<body>
+
+    
+
+
+
+
+
+
+
 <div class="channel-container">
     <div class="channel">
       <span class="hd-icon">FHD</span>
