--- a/Iphone.html
+++ b/Iphone.html
@@ -149,8 +149,8 @@ button.searching:hover {
    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEKuRBRv-SV2y1S6xeIDlxj2Eolm03n5uz_g&usqp=CAU" alt="Additional Image">
  </a>
 
-  <a href="https://www.buymeacoffee.com/nagutegh/e/183092" id="buycode">Buy a key for iphone</a>
-  <a href="https://www.buymeacoffee.com/Nagutegh/e/242770" id="buycode">Buy a key for smart tv</a>
+  <a href="https://www.buymeacoffee.com/nagutegh/e/183092" id="buycode">Buy a key</a>
+  <a href="https://www.buymeacoffee.com/Nagutegh/e/242770" id="buycode">whatsapp</a>
     <a href="whatsapp://send?text=hi, fadlan code isii &phone=+252613050220" id="buycode">whatsapp</a>
   <div class="image-container">
   
