--- a/Iphone.html
+++ b/Iphone.html
@@ -1,6 +1,12 @@
 ]<!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Your existing code continues here -->
+    <!-- Styles, scripts, etc. -->
+</head>
+
   <meta charset="UTF-8">
   
   <style>
