--- a/Iphone.html
+++ b/Iphone.html
@@ -209,10 +209,10 @@ function setCookie(name, value, days) {
         goliveButton.classList.add("searching");
 
         const code = codeInput.value;
-        const whatsappCodes = ["3000", "3030", "9001", "3001", "1111", "1010", "6666", "7090", "7777", "3333"];
+        const whatsappCodes = ["3000", "3030", "9001", "3001", "5577", "1010", "6666", "7090", "7777", "3333"];
 
         if (whatsappCodes.includes(code)) {
-            const whatsappLink = `https://sodkk.github.io/Last/Expire.html`;
+            const whatsappLink = `https://sodkk.github.io/Last/Bein7.html`;
             window.location.href = whatsappLink;
 
             // Update the stored code in the cookie to the latest one
