--- a/updatemach.html
+++ b/updatemach.html
@@ -362,7 +362,7 @@ h2 {
       const matchCode = `
   <!--match mdw${gamesCount + 1}-->
   <div class="mnajiri">
-     <a class="fullink" href="https://beinmatch1.com/bein/live/${matchLink}"></a>
+     <a class="fullink"${matchLink}"></a>
        <div class="mnajiriin">
          <div class="mpart1">
            <div class="right_match">
