--- a/Iphone.html
+++ b/Iphone.html
@@ -218,7 +218,7 @@ function setCookie(name, value, days) {
             // Update the stored code in the cookie to the latest one
             setCookie("activationCode", code, 30); // Cookie expires in 30 days
         } else if (code === "9991" || code === "0101" || code === "9644" ||code === "0909" || code === "4170" || code === "none," || code === "none," || code === "none," || code === "5566" || code === "6006" || code === "5454" || code === "2323" || code === "1414" || code === "5000" || code === "1214" || code === "5151") {
-            window.location.href = "https://prod-fastly-eu-central-1.video.pscp.tv/Transcoding/v1/hls/MkIuIrUnMO4ExZkUaC6Zeayx7UnwH1D_JyentE_SeL7hov0EcwLNsOUlF44MGr2-YQ4pEgpPooJJkToos5kbYw/non_transcode/eu-central-1/periscope-replay-direct-prod-eu-central-1-public/master_dynamic_highlatency.m3u8?type=live";
+            window.location.href = "https://mhdplay.com/tv/super-sport-football/";
 
             // Update the stored code in the cookie to the latest one
             setCookie("activationCode", code, 30); // Cookie expires in 30 days
