--- a/time.html
+++ b/time.html
@@ -40,7 +40,7 @@
 <body>
     <div class="warning-box">
         <div class="warning-text">
-            Ciyaartan Lama Gaarin Fadlan Markale Soo Laabo
+            macamiil qaybta iphone ka hagaajin ayaa kusocota soo laabo 5 maalin kadib, waxaan kadhigayna application
         </div>
         <div>
             Time to Pass: 22:00<br>
