--- a/time.html
+++ b/time.html
@@ -40,10 +40,10 @@
 <body>
     <div class="warning-box">
         <div class="warning-text">
-            macamiil qaybta iphone ka hagaajin ayaa kusocota soo laabo 5 maalin kadib, waxaan kadhigayna application
+            macamiil qaybta iphone ka hagaajin ayaa kusocota , waxaan kadhigayna application
         </div>
         <div>
-            Time to Pass: 22:00<br>
+            delevlopmeny: bari-21:00<br>
             Channels: All<br>
             Device: iPhone
         </div>
