--- a/updatemach.html
+++ b/updatemach.html
@@ -825,7 +825,8 @@ const teams = [
 { name: 'Vietnam', logo: 'https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Vietnam.svg' },
 { name: 'Yemen', logo: 'https://upload.wikimedia.org/wikipedia/commons/8/89/Flag_of_Yemen.svg' },
 { name: 'Zambia', logo: 'https://upload.wikimedia.org/wikipedia/commons/0/06/Flag_of_Zambia.svg' },
-{ name: 'Zimbabwe', logo: 'https://upload.wikimedia.org/wikipedia/commons/6/6a/Flag_of_Zimbabwe.svg' },
+{ name: 'Zambia', logo: 'https://upload.wikimedia.org/wikipedia/commons/0/06/Flag_of_Zambia.svg' },
+{ name: 'Scortland', logo: 'https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg' },
 
 ];
 
