--- a/updatemach.html
+++ b/updatemach.html
@@ -827,6 +827,9 @@ const teams = [
 { name: 'Zambia', logo: 'https://upload.wikimedia.org/wikipedia/commons/0/06/Flag_of_Zambia.svg' },
 { name: 'Zambia', logo: 'https://upload.wikimedia.org/wikipedia/commons/0/06/Flag_of_Zambia.svg' },
 { name: 'Scortland', logo: 'https://upload.wikimedia.org/wikipedia/commons/1/10/Flag_of_Scotland.svg' },
+{ name: 'England', logo: 'https://upload.wikimedia.org/wikipedia/en/b/be/Flag_of_England.svg' },
+{ name: 'Wales', logo: 'https://upload.wikimedia.org/wikipedia/commons/d/dc/Flag_of_Wales.svg' },
+{ name: 'Irland', logo: 'https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Flag_of_Ireland.svg/510px-Flag_of_Ireland.svg.png' },
 
 ];
 
