--- a/Good.html
+++ b/Good.html
@@ -211,6 +211,38 @@
          <div class="mpart1">
            <div class="right_match">
               <span class="right_tech">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Flag_of_Canada.svg">
+                  <div class="fname">Canada</div>
+               </span>
+           </div>
+                 <strong class="najiri1">01:00</strong>
+                 <div class="left_match">
+                   <span class="left_tech">
+                     <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Flag_of_Peru.svg">
+                       <div class="fname">Peru</div>
+                   </span>
+                </div>
+            </div>
+               <div class="details_match">
+                  <span class="first_match">
+                     <i aria-hidden="true" class="fa fa-clock-o"></i><b> america</b>
+                   </span>
+                   <span class="thany"><i aria-hidden="true" class="fa fa-futbol-o"></i><b> uknown</b>
+                   </span>
+                   <span class="liga_mdw"><i aria-hidden="true" class="fa fa-desktop"></i><b>Bein Sport HD1</b>
+                   </span>
+              </div>
+      </div>
+   </div>
+
+
+      <!--match mdw1-->
+  <div class="mnajiri">
+   <a class="fullink" href="go:_2b"></a>
+       <div class="mnajiriin">
+         <div class="mpart1">
+           <div class="right_match">
+              <span class="right_tech">
                  <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg">
                   <div class="fname">Chile</div>
                </span>
