--- a/Good.html
+++ b/Good.html
@@ -218,7 +218,7 @@
                  <strong class="najiri1">01:00</strong>
                  <div class="left_match">
                    <span class="left_tech">
-                     <img src="https://upload.wikimedia.org/wikipedia/commons/d/df/Flag_of_Peru.svg">
+                     <img src="https://cdn.resfu.com/img_data/equipos/3777.png?size=60x&lossy=1">
                        <div class="fname">Peru</div>
                    </span>
                 </div>
