--- a/updatemach.html
+++ b/updatemach.html
@@ -20,7 +20,7 @@
   <form id="matchForm">
     <div class="form-group">
 
-      <input type="url" id="matchLink" placeholder="Enter match link" required>
+<input type="url" id="matchLink" placeholder="Enter match link" value="go:_ads" required>
       <ul id="team1List"></ul>
     </div>
     <div class="form-group">
