--- a/updatemach.html
+++ b/updatemach.html
@@ -54,7 +54,7 @@
     </div>
     <div class="form-group">
      
-      <input type="text" id="commentator" placeholder="Enter commentator" required>
+      <input type="text" id="commentator" placeholder="Enter commentator" value="Unknown" required>
     </div>
     <button type="button" id="generateButton">Generate Code</button>
     
